objects/Government_Programs__c.object
<CustomObject>
    <fields>
        <fullName>Application_Status__c</fullName>
        <label>Application Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Evaluating Responses</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Planning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Award_Date__c</fullName>
        <label>Award Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bidder_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bidder 1</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Government Programs (Bidder 1)</relationshipLabel>
        <relationshipName>Government_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bidder_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bidder 2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Government Programs (Bidder 2)</relationshipLabel>
        <relationshipName>Government_Programs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bidder_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bidder 3</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Government Programs (Bidder 3)</relationshipLabel>
        <relationshipName>Government_Programs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cisco_Share_Booked__c</fullName>
        <label>Cisco Share - Booked</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <label>Competitors</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>8x8</fullName>
                </value>
                <value>
                    <fullName>A10 Networks</fullName>
                </value>
                <value>
                    <fullName>Abacus</fullName>
                </value>
                <value>
                    <fullName>Acano</fullName>
                </value>
                <value>
                    <fullName>Accton Technology</fullName>
                </value>
                <value>
                    <fullName>Acer Group</fullName>
                </value>
                <value>
                    <fullName>Acti</fullName>
                </value>
                <value>
                    <fullName>Adobe</fullName>
                </value>
                <value>
                    <fullName>Adtran</fullName>
                </value>
                <value>
                    <fullName>Adva</fullName>
                </value>
                <value>
                    <fullName>Advanced Digital Broadcast (ADB)</fullName>
                </value>
                <value>
                    <fullName>Aerohive Networks</fullName>
                </value>
                <value>
                    <fullName>Alaxala Networks</fullName>
                </value>
                <value>
                    <fullName>Alcatel-Lucent</fullName>
                </value>
                <value>
                    <fullName>Allied Telesis Holding</fullName>
                </value>
                <value>
                    <fullName>Allot</fullName>
                </value>
                <value>
                    <fullName>Alvarion</fullName>
                </value>
                <value>
                    <fullName>Ambit</fullName>
                </value>
                <value>
                    <fullName>Amino</fullName>
                </value>
                <value>
                    <fullName>Arista</fullName>
                </value>
                <value>
                    <fullName>Array Networks</fullName>
                </value>
                <value>
                    <fullName>Arris</fullName>
                </value>
                <value>
                    <fullName>Aruba Networks</fullName>
                </value>
                <value>
                    <fullName>Audiocodes</fullName>
                </value>
                <value>
                    <fullName>Avaya</fullName>
                </value>
                <value>
                    <fullName>Avigilon</fullName>
                </value>
                <value>
                    <fullName>Avistar</fullName>
                </value>
                <value>
                    <fullName>AWS (Amazon Web Services)</fullName>
                </value>
                <value>
                    <fullName>Barracuda</fullName>
                </value>
                <value>
                    <fullName>Belden</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BPA</fullName>
                </value>
                <value>
                    <fullName>CPAF</fullName>
                </value>
                <value>
                    <fullName>CPFF</fullName>
                </value>
                <value>
                    <fullName>CPIF</fullName>
                </value>
                <value>
                    <fullName>Fixed Price</fullName>
                </value>
                <value>
                    <fullName>IDIQ, GWAC</fullName>
                </value>
                <value>
                    <fullName>Incentive</fullName>
                </value>
                <value>
                    <fullName>Managed Service</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Task Order</fullName>
                </value>
                <value>
                    <fullName>Time and Materials Cost-Reimbursement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Vehicle__c</fullName>
        <label>Contract Vehicle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Agency-Specific</fullName>
                </value>
                <value>
                    <fullName>GWAC</fullName>
                </value>
                <value>
                    <fullName>Mission/Platform deployment</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Status__c</fullName>
        <label>Current Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Grant_Writer_Name__c</fullName>
        <label>Customer Grant Writer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Outcomes__c</fullName>
        <label>Customer Outcomes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Deal_Status__c</fullName>
        <label>Deal Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Deal Status</fullName>
                </value>
                <value>
                    <fullName>Dormant</fullName>
                </value>
                <value>
                    <fullName>Exploratory</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Qualified</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Won</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>E_Rate_Budget__c</fullName>
        <label>E-Rate Budget</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Customer_Account__c</fullName>
        <label>End Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Government Programs</relationshipLabel>
        <relationshipName>Government_Programs8</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Engagement_Status__c</fullName>
        <label>Engagement Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Create and Recommend</fullName>
                </value>
                <value>
                    <fullName>Develop</fullName>
                </value>
                <value>
                    <fullName>Discover</fullName>
                </value>
                <value>
                    <fullName>Proof Points</fullName>
                </value>
                <value>
                    <fullName>Replicate and Scale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Engagement_Type__c</fullName>
        <label>Engagement Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Ecosystem Partners</fullName>
                </value>
                <value>
                    <fullName>Light Touch</fullName>
                </value>
                <value>
                    <fullName>Solutions</fullName>
                </value>
                <value>
                    <fullName>Strategic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Est_Cisco_Share_Funded__c</fullName>
        <label>Est. Cisco Share - Funded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_Cisco_Share_Submitted__c</fullName>
        <label>Est. Cisco Share - Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_Product_Incremental_Bookings_Q1__c</fullName>
        <label>Est. Product Incremental Bookings Q1</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_Product_Incremental_Bookings_Q2__c</fullName>
        <label>Est. Product Incremental Bookings Q2</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_Product_Incremental_Bookings_Q3__c</fullName>
        <label>Est. Product Incremental Bookings Q3</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_Product_Incremental_Pipeline_Q1__c</fullName>
        <label>Est. Product Incremental Pipeline Q1</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_Product_Incremental_Pipeline_Q2__c</fullName>
        <label>Est. Product Incremental Pipeline Q2</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_Product_Incremental_Pipeline_Q3__c</fullName>
        <label>Est. Product Incremental Pipeline Q3</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_Services_Incremental_Bookings_Q1__c</fullName>
        <label>Est. Services Incremental Bookings Q1</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_Services_Incremental_Bookings_Q2__c</fullName>
        <label>Est. Services Incremental Bookings Q2</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_Services_Incremental_Bookings_Q3__c</fullName>
        <label>Est. Services Incremental Bookings Q3</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_Services_Incremental_Pipeline_Q1__c</fullName>
        <label>Est. Services Incremental Pipeline Q1</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_Services_Incremental_Pipeline_Q2__c</fullName>
        <label>Est.Services Incremental Pipeline Q2</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_Services_Incremental_Pipeline_Q3__c</fullName>
        <label>Est. Services Incremental Pipeline Q3</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Cisco_Share_Funded__c</fullName>
        <label>Estimated Cisco Share - Funded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Cisco_Share_Submitted__c</fullName>
        <label>Estimated Cisco Share - Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Total_Grant__c</fullName>
        <label>Estimated Total Grant</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Total_Product_Value_000s__c</fullName>
        <label>Estimated Total Product Value($000s)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Total_Services_Value_000s__c</fullName>
        <label>Estimated Total Services Value ($000s)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Form_470_Closed_Date__c</fullName>
        <description>Form 470 Closed Date</description>
        <label>Form 470 Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Form_470_ID__c</fullName>
        <description>Form 470 ID#</description>
        <label>Form 470 ID#</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Form_470_Open_Date__c</fullName>
        <description>Form 470 Open Date</description>
        <label>Form 470 Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Form_470_Status__c</fullName>
        <description>Form 470 Status</description>
        <label>Form 470 Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Form_471_ID__c</fullName>
        <description>Form 471 ID#</description>
        <label>Form 471 ID#</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Form_471_Status__c</fullName>
        <description>Form 471 Status</description>
        <label>Form 471 Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funding_Commitment_Letter_Received__c</fullName>
        <description>Funding Commitment Letter Received</description>
        <label>Funding Commitment Letter Received</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funding_Percent__c</fullName>
        <label>Funding Percent</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Funding_Program_Name__c</fullName>
        <label>Funding Program Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Funding_Source__c</fullName>
        <label>Funding Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Bonds, Budget</fullName>
                </value>
                <value>
                    <fullName>Cisco Capital</fullName>
                </value>
                <value>
                    <fullName>E-Rate</fullName>
                </value>
                <value>
                    <fullName>Grants (including Title)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funding_Year__c</fullName>
        <label>Funding Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grant_ID__c</fullName>
        <label>Grant ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Grant_Status_1__c</fullName>
        <label>Grant Status 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Booked</fullName>
                </value>
                <value>
                    <fullName>Cisco Capital</fullName>
                </value>
                <value>
                    <fullName>Consultation</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Funded</fullName>
                </value>
                <value>
                    <fullName>Funding Report</fullName>
                </value>
                <value>
                    <fullName>Grant Influenced Opportunity</fullName>
                </value>
                <value>
                    <fullName>Proposal Development</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grant_Status_2__c</fullName>
        <label>Grant Status 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Booked</fullName>
                </value>
                <value>
                    <fullName>Cisco Capital</fullName>
                </value>
                <value>
                    <fullName>Consultation</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Funded</fullName>
                </value>
                <value>
                    <fullName>Funding Report</fullName>
                </value>
                <value>
                    <fullName>Grant Influenced Opportunity</fullName>
                </value>
                <value>
                    <fullName>Proposal Development</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grant_Status_3__c</fullName>
        <label>Grant Status 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Booked</fullName>
                </value>
                <value>
                    <fullName>Cisco Capital</fullName>
                </value>
                <value>
                    <fullName>Consultation</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Funded</fullName>
                </value>
                <value>
                    <fullName>Funding Report</fullName>
                </value>
                <value>
                    <fullName>Grant Influenced Opportunity</fullName>
                </value>
                <value>
                    <fullName>Proposal Development</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grant_Status_Date_1__c</fullName>
        <label>Grant Status Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Status_Date_2__c</fullName>
        <label>Grant Status Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Status_Date_3__c</fullName>
        <label>Grant Status Date 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Status_Date__c</fullName>
        <label>Grant Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Help_Desk_Support_Date__c</fullName>
        <label>Help Desk Support Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Help_Desk_Support_Hrs__c</fullName>
        <label>Help Desk Support Hrs</label>
        <precision>9</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Help_Desk_Support_Type__c</fullName>
        <label>Help Desk Support Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>How_was_this_Opportunity_Generated__c</fullName>
        <description>How was this opportunity generated?</description>
        <label>How was this Opportunity Generated?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Award Follow-Up</fullName>
                </value>
                <value>
                    <fullName>Cisco Account Team (non-outreach)</fullName>
                </value>
                <value>
                    <fullName>Customer Direct Inquiry</fullName>
                </value>
                <value>
                    <fullName>Funding Report</fullName>
                </value>
                <value>
                    <fullName>Grant Professional</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Proactive Outreach to AMs</fullName>
                </value>
                <value>
                    <fullName>Proactive Outreach to Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incumbent_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incumbent 1</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Government Programs (Incumbent 1)</relationshipLabel>
        <relationshipName>Government_Programs5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incumbent_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incumbent 2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Government Programs (Incumbent 2)</relationshipLabel>
        <relationshipName>Government_Programs6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incumbent_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incumbent 3</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Government Programs (Incumbent 3)</relationshipLabel>
        <relationshipName>Government_Programs7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Initiative_ID__c</fullName>
        <label>Initiative ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Initiative_Name__c</fullName>
        <label>Initiative Name</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_New_Relationships_Names_Q1__c</fullName>
        <label>Net New Relationships Names Q1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Net_New_Relationships_Names_Q2__c</fullName>
        <label>Net New Relationships Names Q2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Net_New_Relationships_Names_Q3__c</fullName>
        <label>Net New Relationships Names Q3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Net_New_Relationships_Number_Q1__c</fullName>
        <label>Net New Relationships (Number) Q1</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_New_Relationships_Number_Q2__c</fullName>
        <label>Net New Relationships (Number) Q2</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_New_Relationships_Number_Q3__c</fullName>
        <label>Net New Relationships (Number) Q3</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Years__c</fullName>
        <label>Number Of Years</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Students__c</fullName>
        <label>Number of Students</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Bidder__c</fullName>
        <label>Other Bidder</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Incumbent__c</fullName>
        <label>Other Incumbent</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partners__c</fullName>
        <label>Partners</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Mix__c</fullName>
        <label>Product Mix</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Value_Per_Year_000s__c</fullName>
        <label>Product Value Per Year ($000s)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Program_End_Date__c</fullName>
        <label>Program End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_Start_Date__c</fullName>
        <label>Program Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_Title__c</fullName>
        <label>Program Title</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Exchange_Member__c</fullName>
        <label>Regional Exchange Member</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Deal_IDs__c</fullName>
        <label>Related Deal IDs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Relationships_Developed__c</fullName>
        <label>Relationships Developed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Service_Value_Per_Year_000s__c</fullName>
        <label>Service Value Per Year ($000s)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Services_Mix__c</fullName>
        <label>Services Mix</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Solution_Pilot__c</fullName>
        <label>Solution/Pilot</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Team_Name__c</fullName>
        <label>Team Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Connected Education</fullName>
                </value>
                <value>
                    <fullName>Connected Healthcare</fullName>
                </value>
                <value>
                    <fullName>Connected Justice</fullName>
                </value>
                <value>
                    <fullName>E-Rate</fullName>
                </value>
                <value>
                    <fullName>FBD</fullName>
                </value>
                <value>
                    <fullName>Grants</fullName>
                </value>
                <value>
                    <fullName>NSD</fullName>
                </value>
                <value>
                    <fullName>Solutions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technology_Plan_Approval__c</fullName>
        <description>Technology Plan Approval</description>
        <label>Technology Plan Approval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vertical_Market_Segment__c</fullName>
        <label>Vertical Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Connected Healthcare</fullName>
                </value>
                <value>
                    <fullName>Connected Justice</fullName>
                </value>
                <value>
                    <fullName>HE 2-year</fullName>
                </value>
                <value>
                    <fullName>HE 4-year</fullName>
                </value>
                <value>
                    <fullName>K-12</fullName>
                </value>
                <value>
                    <fullName>SLED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>Government tracker for E-Rate, Grants, FBD, NSD, CE, CJ, Solutions, FBD, etc</description>
    <label>Government Programs</label>
    <nameField>
        <displayFormat>GP-{0}</displayFormat>
        <label>Government Program Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Government Programs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>End_Customer_Account__c</columns>
        <columns>Initiative_Name__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Team_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>